<resources>
    <string name="app_name">Pair Pomodoro</string>
    <string name="start">START</string>
    <string name="pause">PAUSE</string>
    <string name="reset">RESET</string>
    <string name="exit">EXIT</string>
    <string name="start_pomodoro">Start Pomodoro</string>
    <string name="or">OR</string>
    <string name="sync_via_sharing_key">Sync via Sharing Key</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_sharing_key">Enter sharing Key</string>
    <string name="key_copied">Key copied</string>
    <string name="paused">Paused!</string>
    <string name="exit_app">Exit Timer</string>
    <string name="reset_timer">Reset Timer</string>
    <string name="sync_timer">Sync Timer</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="timer_starting">Pomodoro timer is starting</string>
    <string name="started">started</string>
    <string name="exit_timer_button">Exit Timer Button</string>
    <string name="timer_settings_button">Timer Settings Button</string>
    <string name="start_focus">Start Focus</string>
    <string name="take_short_break">Take Short Break</string>
    <string name="take_long_break">Take Long Break</string>
    <string name="focus">Focus</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
</resources>
